--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.7.3",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
